[package]
edition = "2024"
name = "prism-be"
version = "0.1.0"

[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
keystore-rs = {version = "0.3"}
prism-client = {git = "https://github.com/deltadevsde/prism", branch = "main"}
prism-da = {git = "https://github.com/deltadevsde/prism", branch = "main"}
prism-prover = {git = "https://github.com/deltadevsde/prism", branch = "main"}
prism-storage = {git = "https://github.com/deltadevsde/prism", branch = "main"}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.0", features = ["full"]}
toml = "0.8.20"
tracing = "0.1"
tracing-subscriber = "0.3"
